js/js.translator/testData/incremental/invalidation/classFunctionsAndFields/lib1/l1.3_add_param.kt
class Demo(konst x: String, konst y: String = "default") {
    fun foo() = "foo $x update"
    inline fun foo_inline() = "inline foo $x update"
    inline fun unused_inline() = "unused"

    konst field1 = "field1"
}
